# StoryMaker

./: .gitignore  FantasyHelper.py  GenerateWithAI.py  README.md  StoryHelper.py  StoryMaker.py  app.py  main.py  pyproject.toml
outputs/histories/: histories.txt
outputs/stories/: stories.txt
story_inputs/: generate_posters.py  story_system_prompts.json  story_types.json
